--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
       
    <br>   Bitcoin FaucetPay<br>
       <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
+      <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Starbits 10 mins</a><br>
+      <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Claimbits 15 mins</a><br>
+       <a href="http://gobits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Gobits 15 mins</a><br>
+      <a href="https://i-bits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - I-bits 15 mins</a><br>
       <a href="https://diamondfaucet.space/btc/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Diamond Faucet Once a day</a><br>
       <a href="https://herafaucet.top/bitcoin/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Hera Faucet Once a day</a><br>
       <a href="https://bagi.co.in/bitcoin/?ref=5499">1 satoshi Bitcoin - Bagi Faucet every 60 mins</a><br>
