--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <input class="radio" id="two" name="group" type="radio">
   <input class="radio" id="three" name="group" type="radio">
   <div class="tabs">
-  <label class="tab" id="one-tab" for="one">Top 15 Faucets</label>
+  <label class="tab" id="one-tab" for="one">Top 20 Faucets</label>
   <label class="tab" id="two-tab" for="two">No Shortlink Faucets</label>
   <label class="tab" id="three-tab" for="three">Shortlink Faucets</label>
     </div>
@@ -51,9 +51,14 @@
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
+        <h3>
+	<a href="http://cointiply.com/r/Jx6Kp">8. Cointiply</a></h3>
+	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
+    <img src="/file/cply1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
 
        <h3>
-	<a href="https://viefaucet.com/?r=104124">8. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com/?r=104124">9. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
     <p></p>
