--- a/index.html
+++ b/index.html
@@ -25,74 +25,91 @@
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
     <p></p>
-                <h3>
-	<a href="https://bitcoincyclone.com/?r=3177">2. Bitcoin Cyclone</a></h3>
-    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
-    <p></p>
-                    <h3>
-	<a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
-    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-    <p></p>
-    <h3>
-	<a href="https://coinpayz.xyz/?r=155318">4. Coinpayz</a></h3>
-    <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
-    <p></p>
-        <h3>
-	<a href="https://faucetcrypto.com/ref/51422">5. FaucetCrypto</a></h3>
+            <h3>
+	<a href="https://faucetcrypto.com/ref/51422">2. FaucetCrypto</a></h3>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
     <p></p>
                <h3>
-	<a href="https://firefaucet.win/ref/27478">6. Fire Faucet</a></h3>
+	<a href="https://firefaucet.win/ref/27478">3. Fire Faucet</a></h3>
     <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
+    <p></p>
+                <h3>
+	<a href="https://bitcoincyclone.com/?r=3177">4. Bitcoin Cyclone</a></h3>
+    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
     <p></p>
 
     <h3>
-	<a href="https://simplebits.io/ref/n9Z908pvlxST">7. Simplebits</a></h3>
+	<a href="https://coinpayz.xyz/?r=155318">5. Coinpayz</a></h3>
+    <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
+    <p></p>
+
+
+    <h3>
+	<a href="https://simplebits.io/ref/n9Z908pvlxST">6. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+                        <h3>
+	<a href="https://coinpot.in/?r=135650">7. Coinpot.in</a></h3>
+    <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
     <p></p>
         <h3>
 	<a href="http://cointiply.com/r/Jx6Kp">8. Cointiply</a></h3>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
+          <h3>
+	<a href="https://earnmoneyhub.com/?r=10521">9. Earn Money Hub</a></h3>
+	<a target="_blank" href="https://earnmoneyhub.com/?r=10521" >
+    <img src="/file/emh.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
+            <h3>
+	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">9. ES Faucet</a></h3>
+	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
+    <img src="/file/es1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+            <h3>
+	<a href="https://feyorra.fun/refer/user/11076">10. Feyorra Fun</a></h3>
+	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
+    <img src="/file/ff.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
 
        <h3>
-	<a href="https://viefaucet.com/?r=104124">9. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com/?r=104124">11. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
     <p></p>
            <h3>
-	<a href="https://claimbits.net/?ref=167319">9. Claimbits</a></h3>
+	<a href="https://claimbits.net/?ref=167319">12. Claimbits</a></h3>
 	<a target="_blank" href="https://claimbits.net/?ref=167319" >
     <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
          <h3>
-	<a href="https://cryptowin.io/ref/tsaroz">10. Cryptowin</a></h3>
+	<a href="https://cryptowin.io/ref/tsaroz">13. Cryptowin</a></h3>
 	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
     <img src="/file/cwin1.png" width="468" height="60"/></a><br>  </a>
     <p></p>
           <h3>
-	<a href="https://criptoly.com/ref/35156">11. Criptoly</a></h3>
+	<a href="https://criptoly.com/ref/35156">14. Criptoly</a></h3>
 	<a target="_blank" href="https://criptoly.com/ref/35156" >
     <img src="/file/Criptoly.png" width="468" height="60"/></a><br>  </a>
     <p></p>
         <h3>
-	<a href="https://earnbitmoon.club/?ref=145452">12. Earnbitmoon</a></h3>
+	<a href="https://earnbitmoon.club/?ref=145452">15. Earnbitmoon</a></h3>
 	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
     <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
   <h3>
-	<a href="https://pipeflare.io/r/22uo">13. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">16. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
     <p></p>
               <h3>
-	<a href="https://adsbitly.com/?r=7572">14. Adsbitly</a></h3>
+	<a href="https://adsbitly.com/?r=7572">17. Adsbitly</a></h3>
     <a target="_blank" href="https://adsbitly.com/?r=7572"><img src="/file/adb.png" width="468" height="60"></a>
     <p></p>
  <h3>
-	<a href="https://r.adbtc.top/7297">15. Adbtc.top</a></h3>
+	<a href="https://r.adbtc.top/7297">18. Adbtc.top</a></h3>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
     <p></p>
   
