--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 	<a target="_blank" href="https://earnmoneyhub.com/?r=10521" >
     <img src="/file/emh.png" width="468" height="60"/></a><br>  </a>
     <p></p>
+              <h3>
+	<a href="https://claimsatoshi.xyz/?r=101573">10. Claimsatoshi</a></h3>
+	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
+    <img src="/file/csas.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
             <h3>
 	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">9. ES Faucet</a></h3>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
