--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p></p>
                <h3>
 	<a href="https://firefaucet.win/ref/27478">3. Fire Faucet</a></h3>
-    <a href="https://firefau9cet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
+    <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p>
                 <h3>
 	<a href="https://bitcoincyclone.com/?r=3177">4. Bitcoin Cyclone</a></h3>
