--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <h4>
      Litecoin FaucetPay<br>
     <a href="https://bitcoincuba.net/freeltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00045+ Litecoin - Bitcoincuba Faucet 1 min</a><br>
-      <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br>
+    <!--  <a href="https://diamondfaucet.space/ltc/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00027 Litecoin - Diamond Faucet 5 mins</a><br> -->
       <a href="https://herafaucet.top/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Hera Faucet 5 mins</a><br>
        <a href="https://konstantinova.net/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0002 Litecoin - Konstantinova 7 mins</a><br>
        <a href="https://bagi.co.in/litecoin/?ref=77258">300 Litecoin - Bagi Faucet 60 mins</a><br>
