--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       
      <br> USDT (TRX) FaucetPay<br>
       <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00045+ USDT (TRX) - Bitcoincuba Faucet 1 min</a><br>
+      <a href="https://free-usdt.xyz?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00033+ USDT (TRX) - Free USDT 1 min</a><br>
              <a href="https://diamondfaucet.space/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00027 USDT (TRX) - Diamond Faucet 5 mins</a><br>
       <a href="https://konstantinova.net/usdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0002 USDT - Konstantinova 7 mins</a><br>
       
