--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
          <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br><br>
           
        <h4> Tron FaucetPay<br>
-      <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a><br>
+      <a href="https://grabtrx.link?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 1 minute - GrabTRX</a><br>
+         <a href="https://fptrx2.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 3 minute - Olefaucet</a><br>
       <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00145 Tron every 3 minute - Olefaucet 2</a>&nbsp;&nbsp;&nbsp;<br><br>
       
         <h4> Dogecoin FaucetPay<br>
