--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
          <a href="https://konstantinova.net/digibyte/?r=DPZNtGxt96i6hzLDentHrmjXftUyjbe7EQ">$0.0002 Digibyte - Konstantinova 7 mins</a><br>
       
    <br>   Bitcoin FaucetPay<br>
+      <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">2 satoshi Bitcoin - Bitcoinfaucet 5 mins</a><br>
       <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
       <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Starbits 10 mins</a><br>
       <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Claimbits 15 mins</a><br>
