--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
       
    <br>   Bitcoin FaucetPay<br>
       <a href="https://www.bitcoinfaucet.network/home.html?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">2 satoshi Bitcoin - Bitcoinfaucet 5 mins</a><br>
+      <a href="https://www.cryptoearns.com/ref/1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1+ satoshi Bitcoin - Cryptoearns 5 mins</a><br>
       <a href="http://fautsy.com/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Fautsy 10 mins</a><br>
       <a href="http://starbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Starbits 10 mins</a><br>
       <a href="http://claimbits.io/?r=1GZ4P5eSm9WcUAX2ktNpLaJ3PaGnhzYmh1">1 satoshi Bitcoin - Claimbits 15 mins</a><br>
