--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
       <a href="https://digitask.ru/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.00006 Dogecoin - Digitask No captcha no timer</a><br>
       <a href="https://bagi.co.in/dogecoin/?ref=13460">0.0025 Dogecoin - Bagi Faucet 60 mins</a><br>
       <a href="https://keran.co/DOGE/?ref=17516">0.0025 Dogecoin - Keran Faucet 60 mins</a><br>
+      <a href="https://extradoge.xyz/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">0.002 Dogecoin - Extra Doge 2 mins</a><br>
       
 <br>Dash FaucetPay<br>
              <a href="https://bitcoincuba.net/freedash/?r=XcQosemyKiUgYYbGVmnvDDrC1N5ckYfqEf">$0.00045+ Dash - Bitcoincuba Faucet 1 min</a><br>
