--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <a href="https://extra-crypto.com/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0011 Solana every 1 minute - Extra Crypto</a><br>
       <br>
        <h4> Litecoin FaucetPay<br>
-         
+         <a href="https://luckyfaucet.xyz/litecoin?r=saroj433@gmail.com">$0.0014 Litecoin every 1 minute - Lucky faucet</a><br>
       <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Claimcoins</a><br>
          <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Payou win</a><br>
          <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br><br>
