--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
          <a href="https://luckyfaucet.xyz/litecoin?r=saroj433@gmail.com">$0.0014 Litecoin every 1 minute - Lucky faucet</a><br>
       <a href="https://claimcoins.net?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Claimcoins</a><br>
          <a href="https://payou.win/litecoin/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0013 Litecoin every 1 minute - Payou win</a><br>
-         <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a>&nbsp;&nbsp;&nbsp;<br><br>
+         <a href="https://fpltc.olefaucet.xyz/?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.00145 Litecoin every 3 minute - Olefaucet</a><br>
+         <a href="https://luckyfaucet.xyz/litecoin?r=saroj433@gmail.com">$0.0014 Litecoin every 1 minute - Lucky faucet</a><br>
+         <a href="http://ltcking.xyz?r=LciR6UQtLEjKHQqW9L5apqcAffja44Rtjk">$0.0014 Litecoin every 1 minute - LTC King</a><br>
+         <br>
           
        <h4> Tron FaucetPay<br>
       <a href="https://grabtrx.link?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.0015 Tron every 1 minute - GrabTRX</a><br>
