--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <div class="panel" id="three-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
     <h4> Solana FaucetPay<br>
-       <a href="https://litefaucet.in/Solana/?r=saroj433@gmail.com">$0.0025 Solana every 1 minute - Litefaucet</a><br>
+       <a href="https://litefaucet.in/Solana/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0025 Solana every 1 minute - Litefaucet</a><br>
        <a href="https://fpsol.olefaucet.xyz/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.00145 Solana every 3 minute - Olefaucet</a><br>
            <a href="https://payou.win/sol/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0013 Solana every 5 minute - Payou win</a><br>
       <a href="https://faucet.mhabcoin.online/sol/?r=2ii7VHUYBNz3RWC5sSvxC9mgyc4kVtq62fyANLaYkYGd">$0.0012 Solana every 2 mins - Mhab coin</a><br>
