--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
+        <h3> Join FaucetPay first if you haven't already.
+	<a href="https://faucetpay.io/?r=2516">1. Final Dutchy</a></h3>
+    <a href="https://faucetpay.io/?r=2516"  target="_blank" >
+	<img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
+    <p></p>
+    
     <h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">1. Final Dutchy</a></h3>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
@@ -34,8 +40,8 @@
     <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p>
                 <h3>
-	<a href="https://bitcoincyclone.com/?r=3177">4. Bitcoin Cyclone</a></h3>
-    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
+	<a href="https://kpanda.co/?r=566">4. Kpanda</a></h3>
+    <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
     <p></p>
 
     <h3>
@@ -49,61 +55,61 @@
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
+                    <h3>
+	<a href="https://bitcoincyclone.com/?r=3177">7. Bitcoin Cyclone</a></h3>
+    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
+    <p></p>
+    
+                            <h3>
+	<a href="hhttps://adspea.com/?r=1261">8. Adspea</a></h3>
+    <a target="_blank" href="https://adspea.com/?r=1261"><img src="/file/spa.gif" width="468" height="60"></a>
+    <p></p>
                         <h3>
-	<a href="https://coinpot.in/?r=135650">7. Coinpot.in</a></h3>
+	<a href="https://coinpot.in/?r=135650">9. Coinpot.in</a></h3>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
     <p></p>
         <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">8. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">10. Cointiply</a></h3>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
           <h3>
-	<a href="https://earnmoneyhub.com/?r=10521">9. Earn Money Hub</a></h3>
+	<a href="https://earnbitmoon.club/?ref=145452">11. Earnbitmoon</a></h3>
+	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
+    <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+             <h3>
+	<a href="https://claimbits.net/?ref=167319">12. Claimbits</a></h3>
+	<a target="_blank" href="https://claimbits.net/?ref=167319" >
+    <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p>
+          <h3>
+	<a href="https://earnmoneyhub.com/?r=10521">13. Earn Money Hub</a></h3>
 	<a target="_blank" href="https://earnmoneyhub.com/?r=10521" >
     <img src="/file/emh.png" width="468" height="60"/></a><br>  </a>
     <p></p>
               <h3>
-	<a href="https://claimsatoshi.xyz/?r=101573">10. Claimsatoshi</a></h3>
+	<a href="https://claimsatoshi.xyz/?r=101573">14. Claimsatoshi</a></h3>
 	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
     <img src="/file/csas.png" width="468" height="60"/></a><br>  </a>
     <p></p>
             <h3>
-	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">11. ES Faucet</a></h3>
+	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">15. ES Faucet</a></h3>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
     <img src="/file/es1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
             <h3>
-	<a href="https://feyorra.fun/refer/user/11076">12. Feyorra Fun</a></h3>
+	<a href="https://feyorra.fun/refer/user/11076">16. Feyorra Fun</a></h3>
 	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
     <img src="/file/ff.png" width="468" height="60"/></a><br>  </a>
     <p></p>
 
        <h3>
-	<a href="https://viefaucet.com/?r=104124">13. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com/?r=104124">17. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
     <p></p>
-           <h3>
-	<a href="https://claimbits.net/?ref=167319">14. Claimbits</a></h3>
-	<a target="_blank" href="https://claimbits.net/?ref=167319" >
-    <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
-         <h3>
-	<a href="https://cryptowin.io/ref/tsaroz">15. Cryptowin</a></h3>
-	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
-    <img src="/file/cwin1.png" width="468" height="60"/></a><br>  </a>
-    <p></p>
-          <h3>
-	<a href="https://criptoly.com/ref/35156">16. Criptoly</a></h3>
-	<a target="_blank" href="https://criptoly.com/ref/35156" >
-    <img src="/file/Criptoly.png" width="468" height="60"/></a><br>  </a>
-    <p></p>
-        <h3>
-	<a href="https://earnbitmoon.club/?ref=145452">17. Earnbitmoon</a></h3>
-	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
-    <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
+
   <h3>
 	<a href="https://pipeflare.io/r/22uo">18. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
