--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
   <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
-        <h3> Join FaucetPay first if you haven't already.
-	<a href="https://faucetpay.io/?r=2516">1. Final Dutchy</a></h3>
-    <a href="https://faucetpay.io/?r=2516"  target="_blank" >
+        <h3> Join FaucetPay first if you haven't already.<br>
+	    <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	<img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
     <p></p>
     
