--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <a href="https://fptrx.olefaucet.xyz/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00145 Tron every 3 minute - Olefaucet 2</a>&nbsp;&nbsp;&nbsp;<br><br>
       
         <h4> Dogecoin FaucetPay<br>
-           <a href="https://stationbit.xyz/FPdoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.002 Dogecoin every 3 minute - Station</a><br><br>
+           <a href="https://stationbit.xyz/FPdoge/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.002 Dogecoin every 3 minute - Station</a><br>
       <a href="https://payou.win/dogecoin/?r=DH1DEuVudZM4sE66DwQj7geUTNFV9FpASe">$0.0013 Dogecoin every 1 minute - Payou win</a><br><br>
           
           <h4> Bitcoin FaucetPay<br>
