--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
 </div>
 <br>
 <center>ccz.one @ 2021-2022</center><br>
-<!-- Hitsteps TRACKING CODE - Manual 2021-12-31 - DO NOT CHANGE -->
-<script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://log.hitsteps.net/track.php?code=405c0618d8118a7d5f7c333034008069';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
-</script><noscript><a href="http://www.hitsteps.com/"><img src="//log.hitsteps.net/track.php?mode=img&amp;code=405c0618d8118a7d5f7c333034008069" alt="Realtime blog statistics" width="1" height="1" />Realtime blog tracking</a></noscript>
-<!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
+<a title="Real Time Web Analytics" href="http://clicky.com/101351040"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async src="//static.getclicky.com/101351040.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101351040ns.gif" /></p></noscript>
 </body>
