--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           <br> Solana FaucetPay<br>
        <a href="https://litefaucet.in/Solanaa/?r=saroj433@gmail.com">$0.0006 Solana every 2 minute - Litefaucet</a><br>
       <a href="https://bagi.co.in/solana/?ref=4338">260 Solana - Bagi Faucet 60 mins</a><br>
-             <a href="https://keran.co/SOL/?ref=6441">260 Solana - Bagi Faucet 60 mins</a><br>
+             <a href="https://keran.co/SOL/?ref=6441">260 Solana - Keran Faucet 60 mins</a><br>
       
      <br> USDT (TRX) FaucetPay<br>
       <a href="https://bitcoincuba.net/freeusdt/?r=TNuVALprCzXCadShuA37PEwdrK7kvQWeJf">$0.00045+ USDT (TRX) - Bitcoincuba Faucet 1 min</a><br>
