--- a/index.html
+++ b/index.html
@@ -92,43 +92,57 @@
 	<a target="_blank" href="https://earnmoneyhub.com/?r=10521" >
     <img src="/file/emh.png" width="468" height="60"/></a><br>  </a>
     <p></p>
+  
+            <h3>
+	<a href="https://cryptowin.io/ref/tsaroz">14. Cryptowin.io</a></h3>
+	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
+    <img src="/file/cwin.png" width="468" height="60"/></a><br>  </a>
+    <p></p>
+  
               <h3>
-	<a href="https://claimsatoshi.xyz/?r=101573">14. Claimsatoshi</a></h3>
+	<a href="https://claimsatoshi.xyz/?r=101573">15. Claimsatoshi</a></h3>
 	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
     <img src="/file/csas.png" width="468" height="60"/></a><br>  </a>
     <p></p>
+              <h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">16. Satoshi Hero</a></h3>
+	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
+    <img src="/file/shero.jpeg" width="468" height="60"/></a><br>  </a>
+    <p></p>
+
+
             <h3>
-	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">15. ES Faucet</a></h3>
+	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">17. ES Faucet</a></h3>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
     <img src="/file/es1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
             <h3>
-	<a href="https://feyorra.fun/refer/user/11076">16. Feyorra Fun</a></h3>
+	<a href="https://feyorra.fun/refer/user/11076">18. Feyorra Fun</a></h3>
 	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
     <img src="/file/ff.png" width="468" height="60"/></a><br>  </a>
     <p></p>
 
        <h3>
-	<a href="https://viefaucet.com/?r=104124">17. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com/?r=104124">19. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
     <p></p>
 
   <h3>
-	<a href="https://pipeflare.io/r/22uo">18. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
     <p></p>
               <h3>
-	<a href="https://adsbitly.com/?r=7572">19. Adsbitly</a></h3>
+	<a href="https://adsbitly.com/?r=7572">21. Adsbitly</a></h3>
     <a target="_blank" href="https://adsbitly.com/?r=7572"><img src="/file/adb.png" width="468" height="60"></a>
     <p></p>
                 <h3>
-	<a href="https://kpanda.co/?r=566">20. Kpanda</a></h3>
+	<a href="https://kpanda.co/?r=566">22. Kpanda</a></h3>
     <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
     <p></p>
                             <h3>
-	<a href="hhttps://adspea.com/?r=1261">21. Adspea</a></h3>
+	<a href="hhttps://adspea.com/?r=1261">23. Adspea</a></h3>
     <a target="_blank" href="https://adspea.com/?r=1261"><img src="/file/spa.gif" width="468" height="60"></a>
     <p></p>
 
