--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p></p>
     
           
-             <div class="w3-container"> <h3>
+             <div class="w3-container w3-sand"> <h3>
 	<a href="https://freebitco.in/?r=5188579">1. Freebitco.in</a></h3>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
 	<img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br>  </a>
