--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           
              <div class="w3-container w3-light-gray"> <h3>
 	<a href="https://freebitco.in/?r=5188579">1. Freebitco.in</a></h3>
+               <p>$0.0002+ worth of bitcoin every hour. No Ads.
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
 	<img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br>  </a>
                <p></p></div>
