--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           
     <div class="w3-container w3-border w3-leftbar w3-hover-border-green"><h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">2. Final Dutchy</a></h3>
+      60+ coins. Two 30 min faucets. FaucetPay and Coinbase.
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
