--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
-        <h3> Join FaucetPay first if you haven't already.<br>
+    <p>Join FaucetPay first if you haven't already.</p><br>
 	    <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	<img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
     <p></p>
@@ -36,14 +36,14 @@
           
     <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green"><h3>
 	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">2. Final Dutchy</a></h3>
-      <p> 60+ coins. Two 30 min faucets. FaucetPay and Coinbase.</p>
+      <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
           
       <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">       <h3>
 	<a href="https://faucetcrypto.com/ref/51422">3. FaucetCrypto</a></h3>
-        <p>30 min faucet. Daily bonus. Low minimum.
+        <p>30 min faucet. Daily bonus. PTC, Shortlinks.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
                <h3>
