--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="panels">
   <div class="panel" id="one-panel">
     <h4><font color=red>Bookmark us! All links opens in new tab.</font></h4>
-    <p>Join FaucetPay first if you haven't already.</p><br>
+    <p>Join FaucetPay first if you haven't already.</p>
 	    <a href="https://faucetpay.io/?r=2516"  target="_blank" >
 	<img src="/file/fpay.gif" alt= "fpay" width="468" height="60"><br>  </a>
     <p></p>
