--- a/index.html
+++ b/index.html
@@ -54,14 +54,15 @@
           
 <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://r.adbtc.top/7297">5. Adbtc.top</a></h3>
-          <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.
+  <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
     <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
   <p></p></div>
           
-    <h3>
+   <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green"> <h3> 
 	<a href="https://coinpayz.xyz/?r=155318">6. Coinpayz</a></h3>
+     <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
-    <p></p>
+     <p></p></div>
 
 
     <h3>
