--- a/index.html
+++ b/index.html
@@ -64,20 +64,22 @@
     <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a>
      <p></p></div>
 
+             <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+	<a href="https://earnbitmoon.club/?ref=145452">7. Earnbitmoon</a></h3>
+               <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.2 withdrawal to FaucetPay.</p>
+               <a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
+    <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
+    <p></p></div>
 
+          <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">           <h3>
+	<a href="https://bitcoincyclone.com/?r=3177">8. Bitcoin Cyclone</a></h3>
+             <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
+    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
+            <p></p></div>
     <h3>
-	<a href="https://simplebits.io/ref/n9Z908pvlxST">7. Simplebits</a></h3>
+	<a href="https://simplebits.io/ref/n9Z908pvlxST">9. Simplebits</a></h3>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
     <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
-                    <h3>
-	<a href="https://bitcoincyclone.com/?r=3177">8. Bitcoin Cyclone</a></h3>
-    <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
-    <p></p>
-              <h3>
-	<a href="https://earnbitmoon.club/?ref=145452">9. Earnbitmoon</a></h3>
-	<a target="_blank" href="https://earnbitmoon.club/?ref=145452" >
-    <img src="/file/ebm1.gif" width="468" height="60"/></a><br>  </a>
     <p></p>
 
                         <h3>
