--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
              <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
             <p></p></div>
-    <h3>
+    
+      <div class="w3-container w3-border w3-leftbar w3-rightbar w3-sand w3-hover-border-green"> <h3>
 	<a href="https://simplebits.io/ref/n9Z908pvlxST">9. Simplebits</a></h3>
+        <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
 	<a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
-    <img src="/file/simple.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
+    <img src="/file/simple.gif" width="468" height="60"/></a><br> 
+    <p></p></div>
 
                         <h3>
 	<a href="https://coinpot.in/?r=135650">10. Coinpot.in</a></h3>
