--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p></p>
     
           
-             <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+             <div class="w3-container w3-border-white w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
 	<a href="https://freebitco.in/?r=5188579">1. Freebitco.in</a></h3>
                <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
