--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
     <img src="/file/simple.gif" width="468" height="60"/></a><br> 
     <p></p></div>
 
-                        <h3>
+                       <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
 	<a href="https://coinpot.in/?r=135650">10. Coinpot.in</a></h3>
+                         <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
-    <p></p>
+                         <p></p></div>
                    <h3>
 	<a href="https://claimbits.net/?ref=167319">11. Claimbits</a></h3>
 	<a target="_blank" href="https://claimbits.net/?ref=167319" >
