--- a/index.html
+++ b/index.html
@@ -84,28 +84,38 @@
     <img src="/file/simple.gif" width="468" height="60"/></a><br> 
     <p></p></div>
 
-                       <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://coinpot.in/?r=135650">10. Coinpot.in</a></h3>
+
+                 div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+	<a href="https://claimbits.net/?ref=167319">10. Claimbits</a></h3>
+	<a target="_blank" href="https://claimbits.net/?ref=167319" >
+    <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
+  <p></p> </div>
+  
+                           <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+	<a href="https://bitsfree.net/?r=96452">11. Bitsfree</a></h3>
+                         <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
+    <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
+                         <p></p></div>
+  
+                         <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+	<a href="https://coinpot.in/?r=135650">12. Coinpot.in</a></h3>
                          <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://coinpot.in/?r=135650"><img src="/file/coinpot1.gif" width="468" height="60"></a>
                          <p></p></div>
-                   <h3>
-	<a href="https://claimbits.net/?ref=167319">11. Claimbits</a></h3>
-	<a target="_blank" href="https://claimbits.net/?ref=167319" >
-    <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
-        <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">12. Cointiply</a></h3>
+  
+      <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
+	<a href="http://cointiply.com/r/Jx6Kp">13. Cointiply</a></h3>
+        <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
-    <img src="/file/cply1.gif" width="468" height="60"/></a><br>  </a>
-    <p></p>
+    <img src="/file/cply1.gif" width="468" height="60"/></a><br>  
+  <p></p></div>
 
 
-          <h3>
+      <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
 	<a href="https://earnmoneyhub.com/?r=10521">13. Earn Money Hub</a></h3>
 	<a target="_blank" href="https://earnmoneyhub.com/?r=10521" >
     <img src="/file/emh.png" width="468" height="60"/></a><br>  </a>
-    <p></p>
+  <p></p></div>
   
             <h3>
 	<a href="https://cryptowin.io/ref/tsaroz">14. Cryptowin.io</a></h3>
