--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <p></p></div>
 
 
-                 div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+                 <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
 	<a href="https://claimbits.net/?ref=167319">10. Claimbits</a></h3>
 	<a target="_blank" href="https://claimbits.net/?ref=167319" >
     <img src="/file/cb1.gif" width="468" height="60"/></a><br>  </a>
