--- a/index.html
+++ b/index.html
@@ -120,45 +120,46 @@
 
  
   
-            <h3>
+         <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
 	<a href="https://cryptowin.io/ref/tsaroz">15. Cryptowin.io</a></h3>
+           <p>1+ btc satoshi every 15 mins. High paying PTC.</p>
 	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
-    <img src="/file/cwin.png" width="468" height="60"/></a><br>  </a>
-    <p></p>
+    <img src="/file/cwin.png" width="468" height="60"/></a><br>  
+  <p></p></div>
   
               <h3>
 	<a href="https://claimsatoshi.xyz/?r=101573">16. Claimsatoshi</a></h3>
 	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
-    <img src="/file/csas.png" width="468" height="60"/></a><br>  </a>
+    <img src="/file/csas.png" width="468" height="60"/></a><br>  
     <p></p>
               <h3>
 	<a href="https://satoshihero.com/en/register?r=j2337039">17. Satoshi Hero</a></h3>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
-    <img src="/file/shero.jpeg" width="468" height="60"/></a><br>  </a>
+    <img src="/file/shero.jpeg" width="468" height="60"/></a><br>  
     <p></p>
 
 
             <h3>
 	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">18. ES Faucet</a></h3>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
-    <img src="/file/es1.gif" width="468" height="60"/></a><br>  </a>
+    <img src="/file/es1.gif" width="468" height="60"/></a><br>  
     <p></p>
             <h3>
 	<a href="https://feyorra.fun/refer/user/11076">19. Feyorra Fun</a></h3>
 	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
-    <img src="/file/ff.png" width="468" height="60"/></a><br>  </a>
+    <img src="/file/ff.png" width="468" height="60"/></a><br>  
     <p></p>
 
        <h3>
 	<a href="https://viefaucet.com/?r=104124">20. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
-    <img src="/file/vie.png" width="468" height="60"/></a><br>  </a>
+    <img src="/file/vie.png" width="468" height="60"/></a><br>  
     <p></p>
 
   <h3>
 	<a href="https://pipeflare.io/r/22uo">21. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
-    <img src="/file/pf.jpg" width="468" height="60"/></a><br>  </a>
+    <img src="/file/pf.jpg" width="468" height="60"/></a><br>  
     <p></p>
               <h3>
 	<a href="https://adsbitly.com/?r=7572">22. Adsbitly</a></h3>
