--- a/index.html
+++ b/index.html
@@ -122,59 +122,59 @@
   
          <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
 	<a href="https://cryptowin.io/ref/tsaroz">15. Cryptowin.io</a></h3>
-           <p>1+ btc satoshi every 15 mins. High paying PTC.</p>
+           <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
 	<a target="_blank" href="https://cryptowin.io/ref/tsaroz" >
     <img src="/file/cwin.png" width="468" height="60"/></a><br>  
   <p></p></div>
   
+
               <h3>
-	<a href="https://claimsatoshi.xyz/?r=101573">16. Claimsatoshi</a></h3>
-	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
-    <img src="/file/csas.png" width="468" height="60"/></a><br>  
-    <p></p>
-              <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">17. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">16. Satoshi Hero</a></h3>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>  
     <p></p>
 
 
             <h3>
-	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">18. ES Faucet</a></h3>
+	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">17. ES Faucet</a></h3>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
     <img src="/file/es1.gif" width="468" height="60"/></a><br>  
     <p></p>
             <h3>
-	<a href="https://feyorra.fun/refer/user/11076">19. Feyorra Fun</a></h3>
+	<a href="https://feyorra.fun/refer/user/11076">18. Feyorra Fun</a></h3>
 	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
     <img src="/file/ff.png" width="468" height="60"/></a><br>  
     <p></p>
 
        <h3>
-	<a href="https://viefaucet.com/?r=104124">20. Vie Faucet</a></h3>
+	<a href="https://viefaucet.com/?r=104124">19. Vie Faucet</a></h3>
 	<a target="_blank" href="https://viefaucet.com/?r=104124" >
     <img src="/file/vie.png" width="468" height="60"/></a><br>  
     <p></p>
 
   <h3>
-	<a href="https://pipeflare.io/r/22uo">21. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>  
     <p></p>
               <h3>
-	<a href="https://adsbitly.com/?r=7572">22. Adsbitly</a></h3>
+	<a href="https://adsbitly.com/?r=7572">21. Adsbitly</a></h3>
     <a target="_blank" href="https://adsbitly.com/?r=7572"><img src="/file/adb.png" width="468" height="60"></a>
     <p></p>
                 <h3>
-	<a href="https://kpanda.co/?r=566">23. Kpanda</a></h3>
+	<a href="https://kpanda.co/?r=566">22. Kpanda</a></h3>
     <a target="_blank" href="https://kpanda.co/?r=566"><img src="/file/kpanda.gif" width="468" height="60"></a>
     <p></p>
                             <h3>
-	<a href="hhttps://adspea.com/?r=1261">24. Adspea</a></h3>
+	<a href="hhttps://adspea.com/?r=1261">23. Adspea</a></h3>
     <a target="_blank" href="https://adspea.com/?r=1261"><img src="/file/spa.gif" width="468" height="60"></a>
     <p></p>
 
-  
+                <h3>
+	<a href="https://claimsatoshi.xyz/?r=101573">24. Claimsatoshi</a></h3>
+	<a target="_blank" href="https://claimsatoshi.xyz/?r=101573" >
+    <img src="/file/csas.png" width="468" height="60"/></a><br>  
+    <p></p>
   </div>
   <div class="panel" id="two-panel">
      <h4><font color=red>Daily Updated List of Faucets. Bookmark us! All links opens in new tab.</font></h4>
