--- a/index.html
+++ b/index.html
@@ -128,18 +128,20 @@
   <p></p></div>
   
 
-              <h3>
+          <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
 	<a href="https://satoshihero.com/en/register?r=j2337039">16. Satoshi Hero</a></h3>
+            <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>  
-    <p></p>
+            <p></p></div>
 
 
-            <h3>
+           <div class="w3-container w3-border w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
 	<a href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f">17. ES Faucet</a></h3>
+             <p>Multiple coins to claim. Dialy loyality bonus.</p>
 	<a target="_blank" href="https://es.btcnewz.com/?ref=88883f5ddf84e1c42e7f" >
     <img src="/file/es1.gif" width="468" height="60"/></a><br>  
-    <p></p>
+             <p></p></div>
             <h3>
 	<a href="https://feyorra.fun/refer/user/11076">18. Feyorra Fun</a></h3>
 	<a target="_blank" href="https://feyorra.fun/refer/user/11076" >
